--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="D:/softwares/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
+executable_path="C:/Users/hp/OneDrive/Desktop/Godot_v4.2.1-stable_win64.exe"
 show_all_nodes_for_node_selection=false
 use_advanced_connections=false
 
